fix z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ body {
   display: inline-block;
   position: absolute;
   line-height: 30px;
-  z-index:-1;
+  /*z-index:-1;*/
 }
 
 .above-the-fold-lede a {
@@ -224,7 +224,7 @@ body {
 }
 
 .header-bar {
-  z-index: 10;
+  /*z-index: 10;*/
 }
 
 .header-bar, .footer-bar {
@@ -279,6 +279,7 @@ body {
 }
 
 .header-bar-right, .footer-bar-right {
+  z-index:999;
   cursor: pointer;
   text-align: right;
   float: right;
